{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 2971,
  "lineage": "a5faeb3d-91bb-725b-fd7c-8e2e03883311",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instancia_ftp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-064519b8c76274859",
            "arn": "arn:aws:ec2:us-east-1:123463487144:instance/i-0f62929316e93728f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f62929316e93728f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ftp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01a7c77d18ce92c55",
            "private_dns": "ip-192-168-244-27.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.244.27",
            "public_ip": "54.160.3.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0008f0eedd88c3536",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c180da9e3fccd4c",
            "tags": {
              "Name": "ftp-s3"
            },
            "tags_all": {
              "Name": "ftp-s3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07a600651710516c9"
            ]
          },
          "dependencies": [
            "aws_security_group.ftp_sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123463487144:internet-gateway/igw-0307400b036b64ae2",
            "id": "igw-0307400b036b64ae2",
            "owner_id": "123463487144",
            "tags": {
              "Name": "vpc-public-gw"
            },
            "tags_all": {
              "Name": "vpc-public-gw"
            },
            "vpc_id": "vpc-0d89ba5799042b3d1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peer_route_private_to_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.244.0/25",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08ab951369f977d161985865405",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08ab951369f977d16",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0902dca8fb1f85523"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public_gw",
            "aws_route_table.route_table",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peer_route_public_to_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.152.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-019aea16c91b2fa734294654305",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-019aea16c91b2fa73",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0902dca8fb1f85523"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public_gw",
            "aws_route_table.route_table",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123463487144:route-table/rtb-014d7808858ee600e",
            "id": "rtb-014d7808858ee600e",
            "owner_id": "123463487144",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0307400b036b64ae2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-public-route-table"
            },
            "tags_all": {
              "Name": "vpc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d89ba5799042b3d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public_gw",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123463487144:route-table/rtb-019aea16c91b2fa73",
            "id": "rtb-019aea16c91b2fa73",
            "owner_id": "123463487144",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-public-private-route-table"
            },
            "tags_all": {
              "Name": "vpc-public-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d89ba5799042b3d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public_gw",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123463487144:route-table/rtb-08ab951369f977d16",
            "id": "rtb-08ab951369f977d16",
            "owner_id": "123463487144",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-private-route-table"
            },
            "tags_all": {
              "Name": "vpc-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7fcfa6d4ab73489"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public_gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038f648dfe5c2843c",
            "route_table_id": "rtb-014d7808858ee600e",
            "subnet_id": "subnet-04c180da9e3fccd4c"
          },
          "dependencies": [
            "aws_internet_gateway.public_gw",
            "aws_route_table.route_table",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bd78d0871522e5a",
            "route_table_id": "rtb-019aea16c91b2fa73",
            "subnet_id": "subnet-00064863c5f6017f7"
          },
          "dependencies": [
            "aws_internet_gateway.public_gw",
            "aws_route_table.route_table",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04808034f12c10701",
            "route_table_id": "rtb-08ab951369f977d16",
            "subnet_id": "subnet-00004a8c691ee58f5"
          },
          "dependencies": [
            "aws_internet_gateway.public_gw",
            "aws_route_table.route_table",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ftp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123463487144:security-group/sg-07a600651710516c9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a600651710516c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1400
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 20,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 21
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241126131026081500000001",
            "name_prefix": "terraform-",
            "owner_id": "123463487144",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ftp-sg"
            },
            "tags_all": {
              "Name": "ftp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d89ba5799042b3d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123463487144:subnet/subnet-04c180da9e3fccd4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.244.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c180da9e3fccd4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "123463487144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-vpc-public"
            },
            "tags_all": {
              "Name": "public-subnet-vpc-public"
            },
            "vpc_id": "vpc-0d89ba5799042b3d1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123463487144:subnet/subnet-00064863c5f6017f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.244.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00064863c5f6017f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123463487144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-vpc-publica"
            },
            "tags_all": {
              "Name": "private-subnet-vpc-publica"
            },
            "vpc_id": "vpc-0d89ba5799042b3d1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123463487144:subnet/subnet-00004a8c691ee58f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00004a8c691ee58f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123463487144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-vpc-private"
            },
            "tags_all": {
              "Name": "private-subnet-vpc-private"
            },
            "vpc_id": "vpc-0c7fcfa6d4ab73489"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123463487144:vpc/vpc-0d89ba5799042b3d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.244.0/24",
            "default_network_acl_id": "acl-07e46b47629ff3fa9",
            "default_route_table_id": "rtb-0a4e5159ec6afccbe",
            "default_security_group_id": "sg-0a543cb685af537ea",
            "dhcp_options_id": "dopt-054bf5caba2a63b32",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d89ba5799042b3d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a4e5159ec6afccbe",
            "owner_id": "123463487144",
            "tags": {
              "Name": "vpc-publica"
            },
            "tags_all": {
              "Name": "vpc-publica"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123463487144:vpc/vpc-0c7fcfa6d4ab73489",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.152.0/24",
            "default_network_acl_id": "acl-0fe12a4375aa03963",
            "default_route_table_id": "rtb-02a6cb377bedff23f",
            "default_security_group_id": "sg-019f2f776cb0bdfd7",
            "dhcp_options_id": "dopt-054bf5caba2a63b32",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c7fcfa6d4ab73489",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a6cb377bedff23f",
            "owner_id": "123463487144",
            "tags": {
              "Name": "vpc-privada"
            },
            "tags_all": {
              "Name": "vpc-privada"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0902dca8fb1f85523",
            "peer_owner_id": "123463487144",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0c7fcfa6d4ab73489",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "vpc-peer-public-private"
            },
            "tags_all": {
              "Name": "vpc-peer-public-private"
            },
            "vpc_id": "vpc-0d89ba5799042b3d1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}